[tool.poetry]
name = "buildpack-test"
version = "0.1.0"
description = ""
authors = ["Francois Sharpe <francois.sharpe@live.com>"]
readme = "README.md"
packages = [{include = "buildpack_test", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.23.2"
fastapi = "^0.103.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
